Atualizando o codigo mantendo a planilha como manual.